--- a/style.css
+++ b/style.css
@@ -1,11 +1,7 @@
-h1{
-    font-size: 3rem;
-    text-align: center;
-    color: #5555ff;
-}
+
 .container {
     max-width: 400px;
-    margin: 0 auto 0 auto;
+    margin: 5vh auto 0 auto;
     box-shadow: 0px 0px 43px 17px rgba(153, 153, 153, 1);
 }
 #display{
